--- a/reflections.html
+++ b/reflections.html
@@ -133,7 +133,7 @@ $(document).ready(function () {
 </div>
 <div id="parameters-timestemp-length-n-and-elapsed-duration-dt" class="section level2">
 <h2>Parameters Timestemp Length <span class="math inline">\(N\)</span> and Elapsed Duration <span class="math inline">\(dt\)</span></h2>
-<p>The parameter timestemp length <span class="math inline">\(N\)</span> and elapsed duration $dt§ determine together the prediction horizon of the model <span class="math inline">\(N \cdot dt\)</span>. A longer prediction horizon smoother, a shorter prediction horizon reacts faster. I’ve chosen <span class="math inline">\(N = 24\)</span> and <span class="math inline">\(dt = 25ms\)</span> for this task, since this seems to balance the reaction time and the smoothiness of the controller.</p>
+<p>The parameter timestemp length <span class="math inline">\(N\)</span> and elapsed duration $dt§ determine together the prediction horizon of the model <span class="math inline">\(N \cdot dt\)</span>. A longer prediction horizon smoother, a shorter prediction horizon reacts faster. I’ve chosen <span class="math inline">\(N = 15\)</span> and <span class="math inline">\(dt = 50ms\)</span> for this task, since this seems to balance the reaction time and the smoothiness of the controller.</p>
 </div>
 <div id="polynomial-fitting-and-mpc-preprocessing" class="section level2">
 <h2>Polynomial Fitting and MPC Preprocessing</h2>
@@ -144,7 +144,14 @@ next_y_vals[i] = (ptsy[i] - y) * cos(psi) - (ptsx[i] - x) * sin(psi);</code></pr
 </div>
 <div id="model-predictive-control-with-latency" class="section level2">
 <h2>Model Predictive Control with Latency</h2>
-<p>If a latency of 100 ms is simulated and the MPC-controller don’t that into account, it will result instable oscilations and the car drives off the track. In order to prevent that, the actuation after the latency should be applied before the latency took place. This is done by using the 4th actuation of the MPC-controller since <span class="math inline">\(dt=25ms\)</span>.</p>
+<p>If a latency of 100 ms is simulated and the MPC-controller don’t that into account, it will result instable oscilations and the car drives off the track. In order to prevent that, the actuation after the latency should be applied before the latency took place. This is done by using the 2nd actuation of the MPC-controller since <span class="math inline">\(dt=50ms\)</span>.</p>
+<p>This approach requires that actuation values prior to latency index should be set to actuation value of previous step, otherwise the effective of the steering of MPC model would be {0, 0, 0,…value of latency_idx} and different to the optimum path predicted by MPC model. The fixing (MPC.cpp, line 201-206 and 215-220) are implemented as follows:</p>
+<pre class="{c}"><code>// steering value prior to latency should be fixed at last steering input
+for (int i=delta_start; i&lt;delta_start+latency_idx; i++)
+{
+  vars_lowerbound[i] = last_ste;
+  vars_upperbound[i] = last_ste;
+}</code></pre>
 </div>
 </div>
 
